# roycecode

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  GOAL.md  LICENSE  README.md  ZEUS_SHIELD.md  install.ps1  install.sh  llms.txt
.github/: PULL_REQUEST_TEMPLATE.md
devreports/: graphing-system-progress-2026-03-18.md
docs/: AI_AGENT_USAGE.md  ANALYTICAL_MODE.md  ARCHITECTURE.md  BE_FE_MCP_ARCHITECTURE.md  IMPROVEMENT-PLAN-2026-03-24.md  PLUGIN_STACK.md  PLUGIN_SYSTEM.md  RELIABILITY.md  VISUALIZATION_STRATEGY.md  internet-research.md
rust/crates/roycecode/: Cargo.toml
rust/crates/roycecode/src/: agent_runtime.rs  agentic.rs  artifacts.rs  cli.rs  evidence.rs  identity.rs  kuzu_index.rs  lib.rs
rust/crates/roycecode/src/assessment/: mod.rs
rust/crates/roycecode/src/contracts/: mod.rs
rust/crates/roycecode/src/detectors/: dead_code.rs  hardwiring.rs  mod.rs
rust/crates/roycecode/src/doctrine/: mod.rs
rust/crates/roycecode/src/graph/: analysis.rs  mod.rs
rust/crates/roycecode/src/ingestion/: mod.rs  pipeline.rs  scan.rs  structure.rs
rust/crates/roycecode/src/mcp/: contracts.rs  mod.rs
rust/crates/roycecode/src/parsing/: javascript.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs
rust/crates/roycecode/src/plugins/: container.rs  mod.rs  queue.rs  signals.rs  wordpress.rs
rust/crates/roycecode/src/policy/: mod.rs  tune.rs
rust/crates/roycecode/src/resolve/: mod.rs
rust/crates/roycecode/src/review/: mod.rs
rust/crates/roycecode/src/scanners/: ast_grep.rs  framework_catalogs.rs  mod.rs
rust/crates/roycecode/src/security/: mod.rs
rust/crates/roycecode/src/semantic_models/: mod.rs
rust/crates/roycecode/src/surface/: mod.rs
tools/: kuzu_bridge.mjs
website/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+67 files in other folders)
