[workspace]
members = ["rust/crates/roycecode"]
default-members = ["rust/crates/roycecode"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["RoyceCode"]
rust-version = "1.82"

[workspace.dependencies]
ast-grep-language = "0.42.0"
globset = "0.4.18"
petgraph = "0.8.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
regex = "1.12.3"
rmcp = { version = "1.2.0", features = ["transport-io"] }
sarif_rust = "0.3.0"
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread", "sync"] }
tree-sitter = "0.26.7"
tree-sitter-javascript = "0.25.0"
tree-sitter-php = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
walkdir = "2.5"
