[package]
name = "roycecode"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ast-grep-language.workspace = true
globset.workspace = true
petgraph.workspace = true
reqwest.workspace = true
regex.workspace = true
rmcp.workspace = true
sarif_rust.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tree-sitter.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-php.workspace = true
tree-sitter-python.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true
walkdir.workspace = true
